Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -188,6 +188,7 @@
                                     <li><a href="http://gik.me/tag/call-of-duty.html" class="link">call of duty</a> (1)</li>
                                     <li><a href="http://gik.me/tag/cancer.html" class="link">cancer</a> (3)</li>
                                     <li><a href="http://gik.me/tag/cannabis.html" class="link">cannabis</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/canonical.html" class="link">canonical</a> (1)</li>
                                     <li><a href="http://gik.me/tag/canvas.html" class="link">canvas</a> (1)</li>
                                     <li><a href="http://gik.me/tag/captcha.html" class="link">captcha</a> (2)</li>
                                     <li><a href="http://gik.me/tag/car.html" class="link">car</a> (2)</li>
@@ -255,7 +256,7 @@
                                     <li><a href="http://gik.me/tag/denoise.html" class="link">denoise</a> (1)</li>
                                     <li><a href="http://gik.me/tag/denture.html" class="link">denture</a> (1)</li>
                                     <li><a href="http://gik.me/tag/depeche-mode.html" class="link">depeche mode</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/design.html" class="link">design</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/design.html" class="link">design</a> (5)</li>
                                     <li><a href="http://gik.me/tag/destiny.html" class="link">destiny</a> (1)</li>
                                     <li><a href="http://gik.me/tag/devialet.html" class="link">devialet</a> (1)</li>
                                     <li><a href="http://gik.me/tag/dhl.html" class="link">dhl</a> (1)</li>
@@ -278,7 +279,7 @@
                                     <li><a href="http://gik.me/tag/doomsday.html" class="link">doomsday</a> (1)</li>
                                     <li><a href="http://gik.me/tag/dota.html" class="link">dota</a> (3)</li>
                                     <li><a href="http://gik.me/tag/drive.html" class="link">drive</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/drone.html" class="link">drone</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/drone.html" class="link">drone</a> (2)</li>
                                     <li><a href="http://gik.me/tag/drones.html" class="link">drones</a> (1)</li>
                                     <li><a href="http://gik.me/tag/dropbox.html" class="link">dropbox</a> (5)</li>
                                     <li><a href="http://gik.me/tag/drugs.html" class="link">drugs</a> (2)</li>
@@ -541,7 +542,7 @@
                                     <li><a href="http://gik.me/tag/lego.html" class="link">lego</a> (2)</li>
                                     <li><a href="http://gik.me/tag/lenovo.html" class="link">lenovo</a> (12)</li>
                                     <li><a href="http://gik.me/tag/lenta.html" class="link">lenta</a> (3)</li>
-                                    <li><a href="http://gik.me/tag/lentach.html" class="link">lentach</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/lentach.html" class="link">lentach</a> (2)</li>
                                     <li><a href="http://gik.me/tag/lepra.html" class="link">lepra</a> (1)</li>
                                     <li><a href="http://gik.me/tag/less.html" class="link">less</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lets-encrypt.html" class="link">let's encrypt</a> (1)</li>
@@ -611,6 +612,7 @@
                                     <li><a href="http://gik.me/tag/messaging.html" class="link">messaging</a> (1)</li>
                                     <li><a href="http://gik.me/tag/metric.html" class="link">metric</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mhl.html" class="link">mhl</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/microdoft.html" class="link">microdoft</a> (1)</li>
                                     <li><a href="http://gik.me/tag/micron.html" class="link">micron</a> (2)</li>
                                     <li><a href="http://gik.me/tag/microsoft.html" class="link">microsoft</a> (59)</li>
                                     <li><a href="http://gik.me/tag/might-magic.html" class="link">might-magic</a> (1)</li>
@@ -948,7 +950,7 @@
                                     <li><a href="http://gik.me/tag/telegram.html" class="link">telegram</a> (18)</li>
                                     <li><a href="http://gik.me/tag/terminator.html" class="link">terminator</a> (1)</li>
                                     <li><a href="http://gik.me/tag/tesala.html" class="link">tesala</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/tesla.html" class="link">tesla</a> (18)</li>
+                                    <li><a href="http://gik.me/tag/tesla.html" class="link">tesla</a> (19)</li>
                                     <li><a href="http://gik.me/tag/the-international.html" class="link">the international</a> (1)</li>
                                     <li><a href="http://gik.me/tag/thepiratebay.html" class="link">thepiratebay</a> (1)</li>
                                     <li><a href="http://gik.me/tag/thinkery.html" class="link">thinkery</a> (1)</li>
@@ -1029,7 +1031,7 @@
                                     <li><a href="http://gik.me/tag/vital.html" class="link">vital</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vivaldi.html" class="link">vivaldi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vive.html" class="link">vive</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/vk.html" class="link">vk</a> (10)</li>
+                                    <li><a href="http://gik.me/tag/vk.html" class="link">vk</a> (11)</li>
                                     <li><a href="http://gik.me/tag/vkontakte.html" class="link">vkontakte</a> (26)</li>
                                     <li><a href="http://gik.me/tag/vkratsiia.html" class="link">вк.рация</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vodka.html" class="link">vodka</a> (1)</li>
@@ -1091,7 +1093,7 @@
                                     <li><a href="http://gik.me/tag/yahoo.html" class="link">yahoo</a> (3)</li>
                                     <li><a href="http://gik.me/tag/yaliny.html" class="link">yaliny</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yamaha.html" class="link">yamaha</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (36)</li>
+                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (37)</li>
                                     <li><a href="http://gik.me/tag/yandexbrowser.html" class="link">yandex.browser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yandexkit.html" class="link">yandex.kit</a> (2)</li>
                                     <li><a href="http://gik.me/tag/yandexmarket.html" class="link">yandex.market</a> (2)</li>
