Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -68,7 +68,7 @@
                                     <li><a href="http://gik.me/tag/adobe.html" class="link">adobe</a> (5)</li>
                                     <li><a href="http://gik.me/tag/aerobiia.html" class="link">аэробия</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ageofgeeks.html" class="link">ageofgeeks</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/ai.html" class="link">ai</a> (6)</li>
+                                    <li><a href="http://gik.me/tag/ai.html" class="link">ai</a> (7)</li>
                                     <li><a href="http://gik.me/tag/aids.html" class="link">aids</a> (1)</li>
                                     <li><a href="http://gik.me/tag/airfuel.html" class="link">airfuel</a> (1)</li>
                                     <li><a href="http://gik.me/tag/alcatel.html" class="link">alcatel</a> (2)</li>
@@ -93,7 +93,7 @@
                                     <li><a href="http://gik.me/tag/anticollector.html" class="link">anticollector</a> (1)</li>
                                     <li><a href="http://gik.me/tag/apache.html" class="link">apache</a> (1)</li>
                                     <li><a href="http://gik.me/tag/api.html" class="link">api</a> (5)</li>
-                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (75)</li>
+                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (76)</li>
                                     <li><a href="http://gik.me/tag/apple-pay.html" class="link">apple pay</a> (1)</li>
                                     <li><a href="http://gik.me/tag/appnet.html" class="link">app.net</a> (3)</li>
                                     <li><a href="http://gik.me/tag/appstore.html" class="link">appstore</a> (2)</li>
@@ -207,7 +207,7 @@
                                     <li><a href="http://gik.me/tag/charge.html" class="link">charge</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chasy.html" class="link">часы</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chat.html" class="link">chat</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (12)</li>
+                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (13)</li>
                                     <li><a href="http://gik.me/tag/chrome.html" class="link">chrome</a> (7)</li>
                                     <li><a href="http://gik.me/tag/chrome-os.html" class="link">chrome os</a> (4)</li>
                                     <li><a href="http://gik.me/tag/chromebook.html" class="link">chromebook</a> (2)</li>
@@ -390,6 +390,7 @@
                                     <li><a href="http://gik.me/tag/gitlab.html" class="link">gitlab</a> (2)</li>
                                     <li><a href="http://gik.me/tag/gitorius.html" class="link">gitorius</a> (1)</li>
                                     <li><a href="http://gik.me/tag/glass.html" class="link">glass</a> (7)</li>
+                                    <li><a href="http://gik.me/tag/glonass.html" class="link">glonass</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gloom.html" class="link">gloom</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gmail.html" class="link">gmail</a> (3)</li>
                                     <li><a href="http://gik.me/tag/gmo.html" class="link">gmo</a> (3)</li>
@@ -398,7 +399,7 @@
                                     <li><a href="http://gik.me/tag/golang.html" class="link">golang</a> (1)</li>
                                     <li><a href="http://gik.me/tag/goldman-sachs.html" class="link">goldman sachs</a> (1)</li>
                                     <li><a href="http://gik.me/tag/golography.html" class="link">golography</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/google.html" class="link">google</a> (94)</li>
+                                    <li><a href="http://gik.me/tag/google.html" class="link">google</a> (95)</li>
                                     <li><a href="http://gik.me/tag/google-glass.html" class="link">google glass</a> (1)</li>
                                     <li><a href="http://gik.me/tag/google-music.html" class="link">google music</a> (1)</li>
                                     <li><a href="http://gik.me/tag/google-now.html" class="link">google now</a> (1)</li>
@@ -413,6 +414,7 @@
                                     <li><a href="http://gik.me/tag/gps.html" class="link">gps</a> (1)</li>
                                     <li><a href="http://gik.me/tag/grammarnazi.html" class="link">grammarnazi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gran-turismo.html" class="link">gran turismo</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/graphen.html" class="link">graphen</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gravity.html" class="link">gravity</a> (2)</li>
                                     <li><a href="http://gik.me/tag/greenlight.html" class="link">greenlight</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gta.html" class="link">gta</a> (2)</li>
