Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -68,7 +68,7 @@
                                     <li><a href="http://gik.me/tag/adobe.html" class="link">adobe</a> (5)</li>
                                     <li><a href="http://gik.me/tag/aerobiia.html" class="link">аэробия</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ageofgeeks.html" class="link">ageofgeeks</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/ai.html" class="link">ai</a> (8)</li>
+                                    <li><a href="http://gik.me/tag/ai.html" class="link">ai</a> (9)</li>
                                     <li><a href="http://gik.me/tag/aids.html" class="link">aids</a> (1)</li>
                                     <li><a href="http://gik.me/tag/airfuel.html" class="link">airfuel</a> (1)</li>
                                     <li><a href="http://gik.me/tag/alcatel.html" class="link">alcatel</a> (2)</li>
@@ -345,6 +345,7 @@
                                     <li><a href="http://gik.me/tag/fifa.html" class="link">fifa</a> (1)</li>
                                     <li><a href="http://gik.me/tag/fifth-element.html" class="link">fifth element</a> (1)</li>
                                     <li><a href="http://gik.me/tag/findface.html" class="link">findface</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/finland.html" class="link">finland</a> (1)</li>
                                     <li><a href="http://gik.me/tag/fireball.html" class="link">fireball</a> (1)</li>
                                     <li><a href="http://gik.me/tag/firefly.html" class="link">firefly</a> (4)</li>
                                     <li><a href="http://gik.me/tag/firefox.html" class="link">firefox</a> (13)</li>
@@ -354,7 +355,7 @@
                                     <li><a href="http://gik.me/tag/food.html" class="link">food</a> (1)</li>
                                     <li><a href="http://gik.me/tag/forbes.html" class="link">forbes</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ford.html" class="link">ford</a> (4)</li>
-                                    <li><a href="http://gik.me/tag/foxconn.html" class="link">foxconn</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/foxconn.html" class="link">foxconn</a> (2)</li>
                                     <li><a href="http://gik.me/tag/france.html" class="link">france</a> (1)</li>
                                     <li><a href="http://gik.me/tag/free.html" class="link">free</a> (1)</li>
                                     <li><a href="http://gik.me/tag/free2play.html" class="link">free2play</a> (1)</li>
@@ -555,7 +556,7 @@
                                     <li><a href="http://gik.me/tag/lebedev.html" class="link">lebedev</a> (4)</li>
                                     <li><a href="http://gik.me/tag/lefutur.html" class="link">lefutur</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lego.html" class="link">lego</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/lenovo.html" class="link">lenovo</a> (12)</li>
+                                    <li><a href="http://gik.me/tag/lenovo.html" class="link">lenovo</a> (13)</li>
                                     <li><a href="http://gik.me/tag/lenta.html" class="link">lenta</a> (3)</li>
                                     <li><a href="http://gik.me/tag/lentach.html" class="link">lentach</a> (2)</li>
                                     <li><a href="http://gik.me/tag/lepra.html" class="link">lepra</a> (1)</li>
@@ -629,7 +630,7 @@
                                     <li><a href="http://gik.me/tag/mhl.html" class="link">mhl</a> (1)</li>
                                     <li><a href="http://gik.me/tag/microdoft.html" class="link">microdoft</a> (1)</li>
                                     <li><a href="http://gik.me/tag/micron.html" class="link">micron</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/microsoft.html" class="link">microsoft</a> (60)</li>
+                                    <li><a href="http://gik.me/tag/microsoft.html" class="link">microsoft</a> (61)</li>
                                     <li><a href="http://gik.me/tag/might-magic.html" class="link">might-magic</a> (1)</li>
                                     <li><a href="http://gik.me/tag/migration.html" class="link">migration</a> (1)</li>
                                     <li><a href="http://gik.me/tag/military.html" class="link">military</a> (1)</li>
@@ -656,7 +657,7 @@
                                     <li><a href="http://gik.me/tag/mosquitos.html" class="link">mosquitos</a> (1)</li>
                                     <li><a href="http://gik.me/tag/moto-360.html" class="link">moto 360</a> (1)</li>
                                     <li><a href="http://gik.me/tag/motobot.html" class="link">motobot</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/motorola.html" class="link">motorola</a> (11)</li>
+                                    <li><a href="http://gik.me/tag/motorola.html" class="link">motorola</a> (12)</li>
                                     <li><a href="http://gik.me/tag/mozilla.html" class="link">mozilla</a> (9)</li>
                                     <li><a href="http://gik.me/tag/mozlla.html" class="link">mozlla</a> (1)</li>
                                     <li><a href="http://gik.me/tag/msqrd.html" class="link">msqrd</a> (1)</li>
@@ -742,7 +743,7 @@
                                     <li><a href="http://gik.me/tag/passport.html" class="link">passport</a> (1)</li>
                                     <li><a href="http://gik.me/tag/path.html" class="link">path</a> (1)</li>
                                     <li><a href="http://gik.me/tag/paypal.html" class="link">paypal</a> (7)</li>
-                                    <li><a href="http://gik.me/tag/pebble.html" class="link">pebble</a> (9)</li>
+                                    <li><a href="http://gik.me/tag/pebble.html" class="link">pebble</a> (10)</li>
                                     <li><a href="http://gik.me/tag/penthouse.html" class="link">penthouse</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pepper.html" class="link">pepper</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pereezd.html" class="link">переезд</a> (1)</li>
@@ -808,6 +809,7 @@
                                     <li><a href="http://gik.me/tag/rambler.html" class="link">rambler</a> (2)</li>
                                     <li><a href="http://gik.me/tag/rani.html" class="link">rani</a> (1)</li>
                                     <li><a href="http://gik.me/tag/raspberry-pi.html" class="link">raspberry pi</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/razr.html" class="link">razr</a> (1)</li>
                                     <li><a href="http://gik.me/tag/rdio.html" class="link">rdio</a> (1)</li>
                                     <li><a href="http://gik.me/tag/react.html" class="link">react</a> (1)</li>
                                     <li><a href="http://gik.me/tag/reader.html" class="link">reader</a> (1)</li>
@@ -824,7 +826,7 @@
                                     <li><a href="http://gik.me/tag/roamer.html" class="link">roamer</a> (1)</li>
                                     <li><a href="http://gik.me/tag/roaming.html" class="link">roaming</a> (1)</li>
                                     <li><a href="http://gik.me/tag/robohand.html" class="link">robohand</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/robot.html" class="link">robot</a> (8)</li>
+                                    <li><a href="http://gik.me/tag/robot.html" class="link">robot</a> (9)</li>
                                     <li><a href="http://gik.me/tag/robots.html" class="link">robots</a> (5)</li>
                                     <li><a href="http://gik.me/tag/rocketbank.html" class="link">rocketbank</a> (1)</li>
                                     <li><a href="http://gik.me/tag/rosa.html" class="link">rosa</a> (1)</li>
@@ -898,6 +900,7 @@
                                     <li><a href="http://gik.me/tag/smell-phone.html" class="link">smell phone</a> (1)</li>
                                     <li><a href="http://gik.me/tag/smi.html" class="link">сми</a> (1)</li>
                                     <li><a href="http://gik.me/tag/smm.html" class="link">smm</a> (3)</li>
+                                    <li><a href="http://gik.me/tag/snapchat.html" class="link">snapchat</a> (1)</li>
                                     <li><a href="http://gik.me/tag/snappy.html" class="link">snappy</a> (1)</li>
                                     <li><a href="http://gik.me/tag/snapster.html" class="link">snapster</a> (3)</li>
                                     <li><a href="http://gik.me/tag/sochi2014.html" class="link">sochi2014</a> (1)</li>
@@ -1110,7 +1113,7 @@
                                     <li><a href="http://gik.me/tag/yahoo.html" class="link">yahoo</a> (3)</li>
                                     <li><a href="http://gik.me/tag/yaliny.html" class="link">yaliny</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yamaha.html" class="link">yamaha</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (39)</li>
+                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (40)</li>
                                     <li><a href="http://gik.me/tag/yandexbrowser.html" class="link">yandex.browser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yandexkit.html" class="link">yandex.kit</a> (2)</li>
                                     <li><a href="http://gik.me/tag/yandexmarket.html" class="link">yandex.market</a> (2)</li>
