Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -124,6 +124,7 @@
                                     <li><a href="http://gik.me/tag/auto.html" class="link">auto</a> (1)</li>
                                     <li><a href="http://gik.me/tag/automata.html" class="link">automata</a> (1)</li>
                                     <li><a href="http://gik.me/tag/autopilot.html" class="link">autopilot</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/ava.html" class="link">ava</a> (1)</li>
                                     <li><a href="http://gik.me/tag/avatar.html" class="link">avatar</a> (2)</li>
                                     <li><a href="http://gik.me/tag/avito.html" class="link">avito</a> (2)</li>
                                     <li><a href="http://gik.me/tag/aws.html" class="link">aws</a> (1)</li>
@@ -276,7 +277,7 @@
                                     <li><a href="http://gik.me/tag/disney.html" class="link">disney</a> (1)</li>
                                     <li><a href="http://gik.me/tag/display.html" class="link">display</a> (1)</li>
                                     <li><a href="http://gik.me/tag/django.html" class="link">django</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/dna.html" class="link">dna</a> (6)</li>
+                                    <li><a href="http://gik.me/tag/dna.html" class="link">dna</a> (7)</li>
                                     <li><a href="http://gik.me/tag/dnk.html" class="link">днк</a> (1)</li>
                                     <li><a href="http://gik.me/tag/docker.html" class="link">docker</a> (1)</li>
                                     <li><a href="http://gik.me/tag/doge.html" class="link">doge</a> (1)</li>
@@ -475,7 +476,7 @@
                                     <li><a href="http://gik.me/tag/hyundai.html" class="link">hyundai</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ibeacon.html" class="link">ibeacon</a> (1)</li>
                                     <li><a href="http://gik.me/tag/iblazr.html" class="link">iblazr</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/ibm.html" class="link">ibm</a> (10)</li>
+                                    <li><a href="http://gik.me/tag/ibm.html" class="link">ibm</a> (11)</li>
                                     <li><a href="http://gik.me/tag/icann.html" class="link">icann</a> (3)</li>
                                     <li><a href="http://gik.me/tag/icloud.html" class="link">icloud</a> (1)</li>
                                     <li><a href="http://gik.me/tag/icq.html" class="link">icq</a> (2)</li>
@@ -537,6 +538,7 @@
                                     <li><a href="http://gik.me/tag/kde.html" class="link">kde</a> (1)</li>
                                     <li><a href="http://gik.me/tag/keep.html" class="link">keep</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kfc.html" class="link">kfc</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/khryama.html" class="link">khryama</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kikstarter.html" class="link">kikstarter</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kim-dotkom.html" class="link">kim dotkom</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kinect.html" class="link">kinect</a> (1)</li>
@@ -591,6 +593,7 @@
                                     <li><a href="http://gik.me/tag/lsd.html" class="link">lsd</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lte.html" class="link">lte</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lucent.html" class="link">lucent</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/luke.html" class="link">luke</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lumia.html" class="link">lumia</a> (1)</li>
                                     <li><a href="http://gik.me/tag/luxoft.html" class="link">luxoft</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lytro.html" class="link">lytro</a> (2)</li>
@@ -666,7 +669,7 @@
                                     <li><a href="http://gik.me/tag/moto-360.html" class="link">moto 360</a> (1)</li>
                                     <li><a href="http://gik.me/tag/motobot.html" class="link">motobot</a> (1)</li>
                                     <li><a href="http://gik.me/tag/motorola.html" class="link">motorola</a> (12)</li>
-                                    <li><a href="http://gik.me/tag/mozilla.html" class="link">mozilla</a> (10)</li>
+                                    <li><a href="http://gik.me/tag/mozilla.html" class="link">mozilla</a> (11)</li>
                                     <li><a href="http://gik.me/tag/mozlla.html" class="link">mozlla</a> (1)</li>
                                     <li><a href="http://gik.me/tag/msqrd.html" class="link">msqrd</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mts.html" class="link">мтс</a> (1)</li>
@@ -772,8 +775,9 @@
                                     <li><a href="http://gik.me/tag/pipboy.html" class="link">pipboy</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pirate-bay.html" class="link">pirate bay</a> (2)</li>
                                     <li><a href="http://gik.me/tag/pizza-dodo.html" class="link">pizza dodo</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/planetside.html" class="link">planetside</a> (1)</li>
                                     <li><a href="http://gik.me/tag/play-station.html" class="link">play station</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/playstation.html" class="link">playstation</a> (18)</li>
+                                    <li><a href="http://gik.me/tag/playstation.html" class="link">playstation</a> (19)</li>
                                     <li><a href="http://gik.me/tag/pnacl.html" class="link">pnacl</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pochta-rossii.html" class="link">почта россии</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pocket.html" class="link">pocket</a> (1)</li>
@@ -789,6 +793,7 @@
                                     <li><a href="http://gik.me/tag/pornhub.html" class="link">pornhub</a> (7)</li>
                                     <li><a href="http://gik.me/tag/poser.html" class="link">poser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/postgresql.html" class="link">postgresql</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/power.html" class="link">power</a> (1)</li>
                                     <li><a href="http://gik.me/tag/power-sleep.html" class="link">power sleep</a> (1)</li>
                                     <li><a href="http://gik.me/tag/powerpoint.html" class="link">powerpoint</a> (1)</li>
                                     <li><a href="http://gik.me/tag/print.html" class="link">print</a> (1)</li>
@@ -1042,9 +1047,9 @@
                                     <li><a href="http://gik.me/tag/unchained.html" class="link">unchained</a> (1)</li>
                                     <li><a href="http://gik.me/tag/unicode.html" class="link">unicode</a> (1)</li>
                                     <li><a href="http://gik.me/tag/unionpay.html" class="link">unionpay</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/unity.html" class="link">unity</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/unity.html" class="link">unity</a> (5)</li>
                                     <li><a href="http://gik.me/tag/universal.html" class="link">universal</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/unreal.html" class="link">unreal</a> (3)</li>
+                                    <li><a href="http://gik.me/tag/unreal.html" class="link">unreal</a> (4)</li>
                                     <li><a href="http://gik.me/tag/unreal-engine.html" class="link">unreal engine</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ups.html" class="link">ups</a> (1)</li>
                                     <li><a href="http://gik.me/tag/upskirt.html" class="link">upskirt</a> (1)</li>
@@ -1099,7 +1104,7 @@
                                     <li><a href="http://gik.me/tag/wikipedia.html" class="link">wikipedia</a> (1)</li>
                                     <li><a href="http://gik.me/tag/winamp.html" class="link">winamp</a> (1)</li>
                                     <li><a href="http://gik.me/tag/windiws.html" class="link">windiws</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/windows.html" class="link">windows</a> (28)</li>
+                                    <li><a href="http://gik.me/tag/windows.html" class="link">windows</a> (29)</li>
                                     <li><a href="http://gik.me/tag/windows-8.html" class="link">windows 8</a> (4)</li>
                                     <li><a href="http://gik.me/tag/windows-phone.html" class="link">windows phone</a> (1)</li>
                                     <li><a href="http://gik.me/tag/wine.html" class="link">wine</a> (1)</li>
@@ -1115,7 +1120,7 @@
                                     <li><a href="http://gik.me/tag/wto.html" class="link">wto</a> (1)</li>
                                     <li><a href="http://gik.me/tag/wwdc.html" class="link">wwdc</a> (5)</li>
                                     <li><a href="http://gik.me/tag/xbl.html" class="link">xbl</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/xbox.html" class="link">xbox</a> (9)</li>
+                                    <li><a href="http://gik.me/tag/xbox.html" class="link">xbox</a> (10)</li>
                                     <li><a href="http://gik.me/tag/xbox-one.html" class="link">xbox one</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xeon.html" class="link">xeon</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xi3.html" class="link">xi3</a> (1)</li>
