Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -421,6 +421,7 @@
                                     <li><a href="http://gik.me/tag/gotham.html" class="link">gotham</a> (1)</li>
                                     <li><a href="http://gik.me/tag/government.html" class="link">government</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gps.html" class="link">gps</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/graham.html" class="link">graham</a> (1)</li>
                                     <li><a href="http://gik.me/tag/grammarnazi.html" class="link">grammarnazi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/gran-turismo.html" class="link">gran turismo</a> (1)</li>
                                     <li><a href="http://gik.me/tag/graphen.html" class="link">graphen</a> (1)</li>
@@ -530,7 +531,7 @@
                                     <li><a href="http://gik.me/tag/joxi.html" class="link">joxi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/joxiru.html" class="link">joxi.ru</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kalpa.html" class="link">kalpa</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/kamaz.html" class="link">kamaz</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/kamaz.html" class="link">kamaz</a> (3)</li>
                                     <li><a href="http://gik.me/tag/kanobu.html" class="link">kanobu</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kaspersky.html" class="link">kaspersky</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kazakhstan.html" class="link">kazakhstan</a> (1)</li>
@@ -554,7 +555,7 @@
                                     <li><a href="http://gik.me/tag/kuratas.html" class="link">kuratas</a> (1)</li>
                                     <li><a href="http://gik.me/tag/kvn.html" class="link">квн</a> (1)</li>
                                     <li><a href="http://gik.me/tag/land-rover.html" class="link">land rover</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/laser.html" class="link">laser</a> (3)</li>
+                                    <li><a href="http://gik.me/tag/laser.html" class="link">laser</a> (4)</li>
                                     <li><a href="http://gik.me/tag/lasers.html" class="link">lasers</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lastwail.html" class="link">lastwail</a> (1)</li>
                                     <li><a href="http://gik.me/tag/laverna.html" class="link">laverna</a> (1)</li>
@@ -736,6 +737,7 @@
                                     <li><a href="http://gik.me/tag/oppo.html" class="link">oppo</a> (2)</li>
                                     <li><a href="http://gik.me/tag/optronics.html" class="link">optronics</a> (1)</li>
                                     <li><a href="http://gik.me/tag/oracle.html" class="link">oracle</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/organic.html" class="link">organic</a> (1)</li>
                                     <li><a href="http://gik.me/tag/orkut.html" class="link">orkut</a> (1)</li>
                                     <li><a href="http://gik.me/tag/os2.html" class="link">os2</a> (1)</li>
                                     <li><a href="http://gik.me/tag/otpusk.html" class="link">отпуск</a> (1)</li>
@@ -865,7 +867,7 @@
                                     <li><a href="http://gik.me/tag/rzd.html" class="link">rzd</a> (1)</li>
                                     <li><a href="http://gik.me/tag/safari.html" class="link">safari</a> (1)</li>
                                     <li><a href="http://gik.me/tag/samocat.html" class="link">samocat</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/samsung.html" class="link">samsung</a> (32)</li>
+                                    <li><a href="http://gik.me/tag/samsung.html" class="link">samsung</a> (33)</li>
                                     <li><a href="http://gik.me/tag/sandisc.html" class="link">sandisc</a> (1)</li>
                                     <li><a href="http://gik.me/tag/sandisk.html" class="link">sandisk</a> (2)</li>
                                     <li><a href="http://gik.me/tag/sap.html" class="link">sap</a> (1)</li>
@@ -913,6 +915,7 @@
                                     <li><a href="http://gik.me/tag/slack.html" class="link">slack</a> (3)</li>
                                     <li><a href="http://gik.me/tag/sleep.html" class="link">sleep</a> (1)</li>
                                     <li><a href="http://gik.me/tag/sliders.html" class="link">sliders</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/smart-watch.html" class="link">smart watch</a> (1)</li>
                                     <li><a href="http://gik.me/tag/smartphone.html" class="link">smartphone</a> (1)</li>
                                     <li><a href="http://gik.me/tag/smell.html" class="link">smell</a> (2)</li>
                                     <li><a href="http://gik.me/tag/smell-phone.html" class="link">smell phone</a> (1)</li>
@@ -1087,7 +1090,7 @@
                                     <li><a href="http://gik.me/tag/watch.html" class="link">watch</a> (2)</li>
                                     <li><a href="http://gik.me/tag/wattup.html" class="link">wattup</a> (1)</li>
                                     <li><a href="http://gik.me/tag/wayland.html" class="link">wayland</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/wear.html" class="link">wear</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/wear.html" class="link">wear</a> (3)</li>
                                     <li><a href="http://gik.me/tag/web.html" class="link">web</a> (1)</li>
                                     <li><a href="http://gik.me/tag/webassembly.html" class="link">webassembly</a> (2)</li>
                                     <li><a href="http://gik.me/tag/webinar.html" class="link">webinar</a> (1)</li>
